--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
 title: Alice Pierce
-# subtitle: This is where I will tell my friends way too much about me
+subtitle: PhD Candidate @ UC Davis
 ---
+I am a PhD Candidate in the Department of Plant Sciences at UC Davis. I study how intron architecture affects chromatin features in the model plant, <em>Arabidopsis thaliana</em>
