--- a/index.html
+++ b/index.html
@@ -4,3 +4,10 @@ title: Alice Pierce
 subtitle: PhD Candidate @ UC Davis
 ---
 I am a PhD Candidate in the Department of Plant Sciences at UC Davis. I study how intron architecture affects chromatin features in the model plant, <em>Arabidopsis thaliana</em>
+
+As a graduate student researcher in <a href="https://www.monroelab.org/">Dr. Grey Monroe's lab</a>, I use computational biology and bioinformatics skills, alongside molecular biology techniques, 
+to answer how introns contribute to chromatin biology and genome evolution.
+
+When I am not stuck in front of my computer coding, you can find me making science art for my <a href="https://www.instagram.com/alice.pipettes/">Instagram</a>, reading a fiction book, or engaging in 
+local outreach through <a href="https://gspdsacnasatucd.weebly.com/">GSPD SACNAS</a> or <a href="https://environmentors.sf.ucdavis.edu/">EnvironMentors</a>
+
