--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@ layout: home
 title: Alice Pierce
 subtitle: PhD Candidate @ UC Davis
 ---
-I am a PhD Candidate in the Department of Plant Sciences at UC Davis. I study how intron architecture affects chromatin features in the model plant, <em>Arabidopsis thaliana</em>
 
-As a graduate student researcher in <a href="https://www.monroelab.org/">Dr. Grey Monroe's lab</a>, I use computational biology and bioinformatics skills, alongside molecular biology techniques, 
-to answer how introns contribute to chromatin biology and genome evolution.
+            I’m a passionate plant biologist and science communicator. Originally from the vibrant coastal city of Mazatlán, México, 
+            I’ve always been fascinated by the diverse plant life that surrounded me growing up. This early fascination led me to 
+            pursue a career in plant biology. Currently, I’m studying how introns influence chromatin biology in plants as part of 
+            Grey Monroe’s lab at UC Davis.
 
-When I am not stuck in front of my computer coding, you can find me making science art for my <a href="https://www.instagram.com/alice.pipettes/">Instagram</a>, reading a fiction book, or engaging in 
-local outreach through <a href="https://gspdsacnasatucd.weebly.com/">GSPD SACNAS</a> or <a href="https://environmentors.sf.ucdavis.edu/">EnvironMentors</a>
+ <div class="section">
+        <h2>Featured Work</h2>
+        <h3>🌱 Plant Chromatin Biology Research</h3>
+        <p>
+            In my research, I focus on how introns impact chromatin features and gene regulation in plants. I aim to uncover how 
+            these non-coding sequences contribute to broader epigenetic mechanisms.
+        </p>
+        <a class="cta-button" href="#">Read more about my research</a>
+
+        <h3>🎨 Science Art Portfolio</h3>
+        <p>
+            In addition to my research, I combine my love of science with art by creating illustrations that visualize complex biological processes. 
+            Check out some of my recent science art below!
+        </p>
+        <a class="cta-button" href="#">Explore my science art portfolio</a>
+    </div>
+
+    <div class="section">
+        <h2>Outreach & Mentorship</h2>
+        <p>
+            I am deeply committed to fostering equitable and accessible spaces in STEM. As a Mexican immigrant, I have faced barriers on my path to 
+            higher education, and I am passionate about creating opportunities for students from historically underrepresented groups. 
+        </p>
+
+        <h3>Leadership Roles:</h3>
+        <ul>
+            <li><strong>President</strong> of the SACNAS Graduate Student and Postdoctoral Chapter at UC Davis. Our team engages in K-8, high school, 
+                community college, and undergraduate outreach to promote diversity in STEM.
+                <br><a class="cta-button" href="https://gspdsacnasatucd.weebly.com/">Learn more about SACNAS GSPD</a>
+            </li>
+            <li><strong>Program Coordinator</strong> for EnvironMentors. I guide high school students in designing and conducting environmental 
+                research projects through this national mentorship program.
+                <br><a class="cta-button" href="https://environmentors.sf.ucdavis.edu/">Learn more about EnvironMentors</a>
+            </li>
+        </ul>
+    </div>
 
