--- a/index.html
+++ b/index.html
@@ -4,43 +4,42 @@ title: Alice Pierce
 subtitle: PhD Candidate @ UC Davis
 ---
 
-            I’m a passionate plant biologist and science communicator. Originally from the vibrant coastal city of Mazatlán, México, 
+            I’m a passionate plant biologist, science communicator, and artist. Originally from the vibrant coastal city of Mazatlán, México, 
             I’ve always been fascinated by the diverse plant life that surrounded me growing up. This early fascination led me to 
-            pursue a career in plant biology. Currently, I’m studying how introns influence chromatin biology in plants as part of 
-            Grey Monroe’s lab at UC Davis.
+            pursue a career in plant biology. Currently, I’m studying how introns influence chromatin biology in plants in
+            <a href="https://www.monroelab.org/">Dr. Grey Monroe's lab</a> at UC Davis.
 
  <div class="section">
-        <h2>Featured Work</h2>
         <h3>🌱 Plant Chromatin Biology Research</h3>
         <p>
-            In my research, I focus on how introns impact chromatin features and gene regulation in plants. I aim to uncover how 
-            these non-coding sequences contribute to broader epigenetic mechanisms.
+            In my research, I focus on how introns impact chromatin biology. I aim to uncover how 
+            these non-coding sequences contribute to the epigenome and gene expression regulation of plants
         </p>
-        <a class="cta-button" href="#">Read more about my research</a>
+        <a class="cta-button" href="#research">Read more about my research</a>
 
         <h3>🎨 Science Art Portfolio</h3>
         <p>
-            In addition to my research, I combine my love of science with art by creating illustrations that visualize complex biological processes. 
-            Check out some of my recent science art below!
+            In addition to my research, I combine my love of science with art by creating illustrations of plants. 
+            Check out some of my recent science art below or on my <a href="https://www.instagram.com/alice.pipettes/">Instagram</a>
         </p>
-        <a class="cta-button" href="#">Explore my science art portfolio</a>
+        <a class="cta-button" href="#sciart">Explore my science art portfolio</a>
     </div>
 
     <div class="section">
         <h2>Outreach & Mentorship</h2>
         <p>
-            I am deeply committed to fostering equitable and accessible spaces in STEM. As a Mexican immigrant, I have faced barriers on my path to 
+            I am deeply committed to fostering equitable and inclusive spaces in STEM. As a Mexican immigrant, I have faced barriers on my path to 
             higher education, and I am passionate about creating opportunities for students from historically underrepresented groups. 
         </p>
 
-        <h3>Leadership Roles:</h3>
+        <h3>Current outreach involvement:</h3>
         <ul>
             <li><strong>President</strong> of the SACNAS Graduate Student and Postdoctoral Chapter at UC Davis. Our team engages in K-8, high school, 
                 community college, and undergraduate outreach to promote diversity in STEM.
                 <br><a class="cta-button" href="https://gspdsacnasatucd.weebly.com/">Learn more about SACNAS GSPD</a>
             </li>
-            <li><strong>Program Coordinator</strong> for EnvironMentors. I guide high school students in designing and conducting environmental 
-                research projects through this national mentorship program.
+            <li><strong>Program Coordinator</strong> for EnvironMentors. I coordinate a mentorship program for high school students designing and conducting 
+                research projects.
                 <br><a class="cta-button" href="https://environmentors.sf.ucdavis.edu/">Learn more about EnvironMentors</a>
             </li>
         </ul>
