--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@ subtitle: PhD Candidate @ UC Davis
             In my research, I focus on how introns impact chromatin biology. I aim to uncover how 
             these non-coding sequences contribute to the epigenome and gene expression regulation of plants
         </p>
-        <a class="cta-button" href="#research">Read more about my research</a>
+        <a class="cta-button" href="research">Read more about my research</a>
 
         <h3>🎨 Science Art Portfolio</h3>
         <p>
             In addition to my research, I combine my love of science with art by creating illustrations of plants. 
             Check out some of my recent science art below or on my <a href="https://www.instagram.com/alice.pipettes/">Instagram</a>
         </p>
-        <a class="cta-button" href="#sciart">Explore my science art portfolio</a>
+        <a class="cta-button" href="sciart">Explore my science art portfolio</a>
     </div>
 
     <div class="section">
@@ -34,12 +34,12 @@ subtitle: PhD Candidate @ UC Davis
 
         <h3>Current outreach involvement:</h3>
         <ul>
-            <li><strong>President</strong> of the SACNAS Graduate Student and Postdoctoral Chapter at UC Davis. Our team engages in K-8, high school, 
+            <li><strong>President</strong> of the Graduate Student and Postdoctoral SACNAS Chapter at UC Davis. Our team engages in K-8, high school, 
                 community college, and undergraduate outreach to promote diversity in STEM.
                 <br><a class="cta-button" href="https://gspdsacnasatucd.weebly.com/">Learn more about SACNAS GSPD</a>
             </li>
             <li><strong>Program Coordinator</strong> for EnvironMentors. I coordinate a mentorship program for high school students designing and conducting 
-                research projects.
+                independent research projects.
                 <br><a class="cta-button" href="https://environmentors.sf.ucdavis.edu/">Learn more about EnvironMentors</a>
             </li>
         </ul>
