--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ subtitle: PhD Candidate @ UC Davis
     </div>
 
     <div class="section">
-        <h2>Outreach & Mentorship</h2>
+        <h2>🤝 Outreach & Mentorship</h2>
         <p>
             I am deeply committed to fostering equitable and inclusive spaces in STEM. As a Mexican immigrant, I have faced barriers on my path to 
             higher education, and I am passionate about creating opportunities for students from historically underrepresented groups. 
