--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ subtitle: PhD Candidate @ UC Davis
         <ul>
             <li><strong>President</strong> of the Graduate Student and Postdoctoral SACNAS Chapter at UC Davis. Our team engages in K-8, high school, 
                 community college, and undergraduate outreach to promote diversity in STEM.
-                <br><a class="cta-button" href="https://gspdsacnasatucd.weebly.com/">Learn more about SACNAS GSPD</a>
+                <br><a class="cta-button" href="https://gspdsacnasatucd.weebly.com/">Learn more about GSPD SACNAS at UC Davis</a>
             </li>
-            <li><strong>Program Coordinator</strong> for EnvironMentors. I coordinate a mentorship program for high school students designing and conducting 
+            <li><strong>Program Coordinator</strong> for EnvironMentors at UC Davis. I coordinate a mentorship program for high school students designing and conducting 
                 independent research projects.
-                <br><a class="cta-button" href="https://environmentors.sf.ucdavis.edu/">Learn more about EnvironMentors</a>
+                <br><a class="cta-button" href="https://environmentors.sf.ucdavis.edu/">Learn more about EnvironMentors at UC Davis</a>
             </li>
         </ul>
     </div>
