--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@ subtitle: PhD Candidate @ UC Davis
 ---
 
             I’m a passionate plant biologist, science communicator, and artist. Originally from the vibrant coastal city of Mazatlán, México, 
-            I’ve always been fascinated by the diverse plant life that surrounded me growing up. This early fascination led me to 
-            pursue a career in plant biology. Currently, I’m studying how introns influence chromatin biology in plants in
-            <a href="https://www.monroelab.org/">Dr. Grey Monroe's lab</a> at UC Davis.
+            I’ve always been fascinated by the diverse plant life that surrounded me growing up. Currently, I’m studying how introns influence chromatin biology in plants in
+            <a href="https://www.monroelab.org/">Dr. Grey Monroe's lab</a> at UC Davis. 
 
  <div class="section">
         <h3>🌱 Plant Chromatin Biology Research</h3>
